@@ -263,7 +263,7 @@ BEGIN
                     WS_TABSTOP
     LTEXT           "Data Base:",IDC_LABEL_DATABASE,147,26,44,8,0,
                     WS_EX_TRANSPARENT
-    COMBOBOX        107,194,24,81,224,CBS_DROPDOWNLIST | WS_VSCROLL | 
+    COMBOBOX        IDC_DATABASE,194,24,81,224,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     LTEXT           "Value:",IDC_LABEL_VALUE,7,43,50,8,0,WS_EX_TRANSPARENT
     EDITTEXT        IDC_VALUEFROM,60,41,80,12,ES_AUTOHSCROLL
@@ -391,7 +391,7 @@ MAIN_LOGO               BITMAP                  "gui\\pcsx.bmp"
 // RT_MANIFEST
 //
 
-24                      RT_MANIFEST             "gui\\pcsx.exe.manifest"
+1                       RT_MANIFEST             "gui\\pcsx.exe.manifest"
 #endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
