@@ -1,3 +1,10 @@
+August 24, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * win32/gui/WndMain.c: Set the language to the OS language by default.
+ * win32/gui/ConfigurePlugins.c: Made some strings translatable.
+ * win32/gui/CheatDlg.c: Fixed incorrect usage of SysMessage().
+ * win32/pcsx.rc, win32/resource.h: Fixed manifest.
+
 August 23, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * data/pcsx.glade2: Added "..." in menu items which will popup a dialog.
